# AIEngineering

./: README.md
1_foundations/: .gitignore  .gradio-ignore  README.md  app.py  pyproject.toml
1_foundations/labs/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb
1_foundations/me/: summary.txt
5_autogen/: .gitignore
analytics_team/: AGENTS.md  PLAN.md  pyproject.toml
analytics_team/backend/: main.py
analytics_team/frontend/: jest.config.ts  package-lock.json  package.json
analytics_team/frontend/__tests__/: page.test.tsx
analytics_team/frontend/app/: layout.tsx  page.tsx
analytics_team/src/: context_schema.py  main.py
analytics_team/src/clean/: agent.py  tools.py
analytics_team/tests/: test_backend.py  test_clean_agent.py  test_context_schema.py
shift_scheduler/: AGENTS.md  README.md  package-lock.json  package.json
shift_scheduler/data/: demand.csv  roster.json
shift_scheduler/src/__MOCKS__/: clockify.ts
shift_scheduler/src/app/: globals.css  layout.tsx  page.tsx
shift_scheduler/src/app/plan/: page.tsx
shift_scheduler/src/components/charts/: CoverageDeltaChart.tsx  DemandChart.tsx  LaborChart.tsx  chart-utils.tsx
shift_scheduler/src/components/publish/: PublishPanel.tsx
shift_scheduler/src/components/schedule/: CoverageSidebar.tsx  ShiftTimeline.tsx
shift_scheduler/src/components/warnings/: WarningsPanel.tsx
shift_scheduler/src/lib/: constants.ts
shift_scheduler/src/lib/ingestion/: index.ts  (+2 more)
shift_scheduler/src/scripts/: generate-demand.ts  generate-roster.ts
shift_scheduler/src/types/: index.ts
site/: .gitignore
(+12 files in other folders)
