[project]
name = "1-foundations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.72.0",
    "python-dotenv>=1.0.0",
    "gradio>=5.49.1",
    "ipykernel>=7.1.0",
    "openai>=2.7.1",
    "pypdf>=6.1.3",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
