[project]
name = "analytics-team"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pandas>=2.2.0",
    "pyarrow>=17.0.0",
    "matplotlib>=3.9.0",
    "weasyprint>=62.0",
    "pydantic>=2.8.0",
    "anthropic>=0.34.0",
    "openai>=1.40.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
